# IF-Vault

./: .gitignore  0216~.md  2026-01-23.md  README.md  ツール導入時のフロー.md
.claude/: CLAUDE.md  SLACK_NOTIFICATION_SETUP.md  settings.json
.github/workflows/: claude-pr-review.yml  daily-report.yml  morning-scrum.yml  sprint-review.yml
.obsidian/: appearance.json  community-plugins.json  daily-notes.json  workspace.json
.obsidian/snippets/: custom.css
docs/: クイックスタートガイド.md  新入社員向けオンボーディング.md
docs/daily/: 相談事項.md
docs/onboarding/: 01_クイックスタート.md  02_セットアップガイド.md  03_使い方ガイド.md  04_チーム運用ルール.md  README.md  claude-code-setup.md  オンボーディング-Slack共有まとめ.md
docs/technical/: claude-code-full-customization.md
projects/If-DB/: ANSEM-API仕様書.yaml  ANSEM-NotebookLM用フィード.md  ANSEM-Phase1実装計画.md  ANSEM-データ投入運用方針.md  ANSEM-プロジェクト全体サマリー.md  ANSEM-一括登録機能メモ.md  ANSEM-要件変更ログ.md  ANSEM-設計ナビゲーションマップ.md  ANSEM-追加機能ロードマップ.md
projects/If-DB/ansem-import/: pyproject.toml
projects/If-DB/ansem-import/src/ansem_import/: loader.py  transformer.py  validator.py
projects/If-DB/ansem-import/tables/: influencers.yaml
task_rules/: タスクについて.md
team/guchi/: CLAUDE.md  README.md  mermaid-test.md
team/ikuta/: ikuraちゃんオンボーディング.md  月別シート_パフォーマンス最適化レポート.md  月別シート関数_パフォーマンス改善案.md
team/kawamuro/: 0224~.md  関数地獄.md
team/muro/: 0202~.md  0209~.md
team/sekiguchi/: CLAUDE.md  README.md  lessons.md  ダッシュボード.md
team/shared/: Obsidian VaultとClaude Codeのセットアップガイド.md
templates/: code-snippet-template.md  daily-note-template.md  guchi-daily-template.md  meeting-note-template.md  project-template.md
(+400 files in other folders)
