[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansem-import"
version = "0.1.0"
description = "ANSEM DB一括登録CLIツール"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
ansem-import = "ansem_import.cli:main"
